# hellio-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/hellio/: __init__.py  client.py  errors.py  ussd.py
tests/: test_client.py
