[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "helliomessaging"
version = "1.0.0"
description = "Official Python SDK for the Hellio Messaging API (SMS, OTP, Voice, Number Lookup, Email Verification, Webhooks)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Albert Ninyeh", email = "eaglesecurity0@gmail.com" }]
keywords = ["hellio", "sms", "otp", "voice", "messaging", "hlr", "email-verification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.23"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "respx>=0.20", "mypy>=1.0"]

[project.urls]
Homepage = "https://helliomessaging.com"
Repository = "https://github.com/HellioSolutions/hellio-python"
Issues = "https://github.com/HellioSolutions/hellio-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hellio"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
